// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compiling to CSS and JavaScript should return a map of files 1`] = `
Object {
  "Button.elo.css": "._q5mnyi {
  background-color: red;
  color: rgba(250,250,250,0.35);
  font-size: 15px;
  line-height: 5.2px
}

._q5mnyi__Type-Primary {
  color: red
}

._q5mnyi__Type-Primary__Mode-Dark {
  color: blue
}

._q5mnyi__Mode-Light {
  color: green
}",
  "Button.elo.js": "import './Button.elo.css'
import { getClassNameFromVariantMap } from '@elodin/runtime'

const variantMap = {
  \\"\\": {},
  \\"__Type-Primary\\": {
    \\"Type\\": \\"Primary\\"
  },
  \\"__Type-Primary__Mode-Dark\\": {
    \\"Type\\": \\"Primary\\",
    \\"Mode\\": \\"Dark\\"
  },
  \\"__Mode-Light\\": {
    \\"Mode\\": \\"Light\\"
  }
}

export function Button(props = {}) {
  return {
    _className: getClassNameFromVariantMap('_q5mnyi', variantMap, props),
    \\"borderWidth\\":props.undefined
  }
}",
  "Label.elo.css": "._1hw7vmc {
  font-size: 20px
}

._1hw7vmc:hover {
  color: red
}",
  "Label.elo.js": "import './Label.elo.css'

export function Label(props = {}) {
  return {
    _className: _1hw7vmc,
    \\"lineHeight\\":props.lineHeight,
    \\":hover\\":{\\"backgroundColor\\":props.bgColor}
  }
}",
  "_root": "import { Button } from './Button.elo.js'
import { Label } from './Label.elo.js'

export {
  Button,
  Label
}",
}
`;

exports[`Compiling to CSS and JavaScript should use the given adapter 1`] = `
Object {
  "Button.elo.css": "._q5mnyi {
  background-color: red;
  color: rgba(250,250,250,0.35);
  font-size: 15px;
  line-height: 5.2px
}

._q5mnyi__Type-Primary {
  color: red
}

._q5mnyi__Type-Primary__Mode-Dark {
  color: blue
}

._q5mnyi__Mode-Light {
  color: green
}",
  "Button.elo.js": "import './Button.elo.css'
import { createComponent } from 'react-fela'
import { getClassNameFromVariantMap } from '@elodin/runtime'

const variantMap = {
  \\"\\": {},
  \\"__Type-Primary\\": {
    \\"Type\\": \\"Primary\\"
  },
  \\"__Type-Primary__Mode-Dark\\": {
    \\"Type\\": \\"Primary\\",
    \\"Mode\\": \\"Dark\\"
  },
  \\"__Mode-Light\\": {
    \\"Mode\\": \\"Light\\"
  }
}

function Button(props  = {}) {
  return {
    _className: getClassNameFromVariantMap('_q5mnyi', variantMap, props),
    \\"borderWidth\\":props.undefined
  }
}

export default createComponent(Button)",
  "Label.elo.css": "._1hw7vmc {
  font-size: 20px
}

._1hw7vmc:hover {
  color: red
}",
  "Label.elo.js": "import './Label.elo.css'
import { createComponent } from 'react-fela'

function Label(props  = {}) {
  return {
    _className: _1hw7vmc,
    \\"lineHeight\\":props.lineHeight,
    \\":hover\\":{\\"backgroundColor\\":props.bgColor}
  }
}

export default createComponent(Label)",
  "_root": "import { Button } from './Button.elo.js'
import { Label } from './Label.elo.js'

export {
  Button,
  Label
}",
}
`;
